unpackaged/main/default/objects/EmailMessage/fields/Account_Objective__c.field-meta.xml
<CustomField>
    <fullName>Account_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Objective</label>
    <referenceTo>Account_Objective__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>