unpackaged/main/default/objects/EmailMessage/fields/Action_1st_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_1st_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 1st Quarter</label>
    <referenceTo>Actions_1st_Quarter__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>