unpackaged/main/default/objects/EmailMessage/fields/Action_4th_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_4th_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 4th Quarter</label>
    <referenceTo>Action_4th_Quarter__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>