unpackaged/main/default/objects/EmailMessage/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF(CreatedBy.Id = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>