unpackaged/main/default/objects/EmailMessage/fields/Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>