unpackaged/main/default/objects/EmailMessage/fields/resco_contentstatus__c.field-meta.xml
<CustomField>
    <fullName>resco_contentstatus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Content Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>