unpackaged/main/default/objects/EmailMessage/fields/resco_createdas__c.field-meta.xml
<CustomField>
    <fullName>resco_createdas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Created As</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>