unpackaged/main/default/objects/EmailMessage/fields/resco_createdfrom__c.field-meta.xml
<CustomField>
    <fullName>resco_createdfrom__c</fullName>
    <label>Created From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>