unpackaged/main/default/objects/EmailMessage/fields/resco_description__c.field-meta.xml
<CustomField>
    <fullName>resco_description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>