unpackaged/main/default/objects/EmailMessage/fields/resco_emailid__c.field-meta.xml
<CustomField>
    <fullName>resco_emailid__c</fullName>
    <label>Email Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>