unpackaged/main/default/objects/EmailMessage/fields/resco_eventid__c.field-meta.xml
<CustomField>
    <fullName>resco_eventid__c</fullName>
    <label>Event Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>