unpackaged/main/default/objects/EmailMessage/fields/resco_islocal__c.field-meta.xml
<CustomField>
    <fullName>resco_islocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Local</label>
    <type>Checkbox</type>
</CustomField>