unpackaged/main/default/objects/EmailMessage/fields/resco_mimetype__c.field-meta.xml
<CustomField>
    <fullName>resco_mimetype__c</fullName>
    <label>Mime Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>