unpackaged/main/default/objects/EmailMessage/fields/resco_snippet__c.field-meta.xml
<CustomField>
    <fullName>resco_snippet__c</fullName>
    <label>Snippet</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>