unpackaged/main/default/objects/EmailMessage/fields/resco_source__c.field-meta.xml
<CustomField>
    <fullName>resco_source__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Source</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>