unpackaged/main/default/objects/EmailMessage/fields/resco_statuscode__c.field-meta.xml
<CustomField>
    <fullName>resco_statuscode__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Status Code</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>