unpackaged/main/default/objects/EmailMessage/fields/resco_threadid__c.field-meta.xml
<CustomField>
    <fullName>resco_threadid__c</fullName>
    <label>Thread Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>