unpackaged/main/default/objects/EmailMessage/validationRules/Change_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Text</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CONTAINS(HtmlBody, &quot;X$X&quot;),CONTAINS(HtmlBody, &quot;X$X&quot;))</errorConditionFormula>
    <errorMessage>You must replace the data highlighted in red and remove the X$X marks before sending this email.</errorMessage>
</ValidationRule>